- changed height for mobile tablet users to avoid the weird scrolling of white space

--- a/styles/preferences-page.css
+++ b/styles/preferences-page.css
@@ -33,6 +33,7 @@
 .pref-cat-container {
     display: flex; gap: 1rem; align-items: center;
     overflow-x: auto;
+    min-height: 75px;
 }
 .pref-cat-container > span {
     min-width: 8rem;
